--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div id="contact" class="contact">
             <div class="container">
                 <h2 class="special-heading">Contact</h2>
-                <p>We Are Porn To Create</p>
+                <p>We Are born To Create</p>
                 <div class="info">
                     <p class="label">Feel Free To Drop Us A Line At:</p>
                     <a href="mailto:besho@mail.com?subject=contact" class="link">besho@mail.com</a>
