--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>besho | Template two</title>
+        <title>Leon | Template One</title>
         <!-- Main Template CSS File -->
         <link rel="stylesheet" href="css/leon.css" />
         <!-- Render All Elements Normally -->
@@ -174,7 +174,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
         <!--end about-->
         <!--start contact-->
